meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/hrt/snapshots/memfaultd__metrics__hrt__schema__test__counter.snap
---
source: memfaultd/src/metrics/hrt/schema.rs
expression: json!(datum)
---
{
  "t": 1234,
  "value": 123.0
}
