meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/hrt/snapshots/memfaultd__metrics__hrt__schema__test__serialization.snap
---
source: memfaultd/src/metrics/hrt/schema.rs
expression: json!(hrt)
---
{
  "duration_ms": 0,
  "producer": {
    "id": "memfaultd",
    "version": "1.2.3"
  },
  "rollups": [
    {
      "data": [
        {
          "t": 1010,
          "value": 220.0
        }
      ],
      "metadata": {
        "data_type": "double",
        "internal": false,
        "metric_type": "counter",
        "string_key": "test"
      }
    }
  ],
  "schema_version": 1,
  "start_time": 669859200000
}
